// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionRow should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
    title="title"
  >
    <div
      data-testid="children"
    />
  </div>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="styledComponents__Row-sc-1627zcn-0 gcIaGA"
    title="title"
  >
    <div
      data-testid="children"
    />
  </div>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 3`] = `
<DocumentFragment>
  <div
    class="styledComponents__Row-sc-1627zcn-0 gcIaGA"
    title="children"
  >
    children
  </div>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 4`] = `
<DocumentFragment>
  <div
    class="styledComponents__Row-sc-1627zcn-0 gcIaGA"
  >
    <div
      data-testid="children"
    />
  </div>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1627zcn-1 hxiQJS"
  >
    <div
      class="ant-descriptions"
    >
      <div
        class="ant-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-0
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-0"
                    >
                      <div
                        data-testid="children-0"
                      />
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-1
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-1"
                    >
                      <div
                        data-testid="children-1"
                      />
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-2
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-2"
                    >
                      <div
                        data-testid="children-2"
                      />
                    </div>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1627zcn-1 hxiQJS"
  >
    <div
      class="ant-descriptions"
    >
      <div
        class="ant-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="ant-descriptions-row"
            >
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-0
                  </span>
                </div>
              </th>
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-1
                  </span>
                </div>
              </th>
              <th
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    label-2
                  </span>
                </div>
              </th>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-0"
                    >
                      <div
                        data-testid="children-0"
                      />
                    </div>
                  </span>
                </div>
              </td>
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-1"
                    >
                      <div
                        data-testid="children-1"
                      />
                    </div>
                  </span>
                </div>
              </td>
              <td
                class="ant-descriptions-item"
                colspan="1"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="styledComponents__Row-sc-1627zcn-0 jPDDpZ"
                      title="title-2"
                    >
                      <div
                        data-testid="children-2"
                      />
                    </div>
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
